@@ -15,6 +15,7 @@
   typeset music. Here are some hints.
 </p>
 
+
 <p align="right">
   <em>Click to enlarge</em>
   <a href="@IMAGES@terminal-shot.png">
@@ -23,6 +24,7 @@
 </p>
 
 <h2>Testing LilyPond</h2>
+
 <p>
   These are the instruction for Unix and Windows on the command line.
   Windows users are advised to a look at the
