@@ -7,9 +7,9 @@
     When revising a translation, copy the CVS Revision number from the
     original source file.  !-->
 
-<title>LilyPond - on MacOS X</title>
+<title>LilyPond - on Fink under MacOS X</title>
 
-<h1>LilyPond on MacOS X</h1>
+<h1>LilyPond on Fink underMacOS X</h1>
 
 <p>LilyPond is available through fink, in the unstable cvs
   distribution
